3/05/2006 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Finished tab completion feature request.

3/05/2006 Bob Rossi <bob@brasko.net>

	* NEWS: Add note for tab completion (quoting lines).

3/05/2006 Bob Rossi <bob@brasko.net>

	* NEWS: Add note for tab completion.

3/01/2006 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Another minor bug for .6.1

2/27/2006 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Update for .6.1

2/26/2006 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Moved task to .6.2

2/25/2006 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Finish another task.

2/25/2006 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Add another release problem.

2/25/2006 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Document new highlight command.
	* NEWS: Add note about manual.

2/24/2006 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Reorganize for .6.1

2/24/2006 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Add some tasks.
	
2/24/2006 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Finished a problem.

2/24/2006 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Remove 2 not needed tasks.
	
2/24/2006 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Add several new tasks to do.

2/23/2006 Bob Rossi <bob@brasko.net>

	* NEWS: Added some new functionality for the user to see.

2/23/2006 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Added some extra stuff to do.

2/18/2006 Bob Rossi <bob@brasko.net>

	* NEWS: Fix a bug introduced in 0.6.0.

2/16/2006 Bob Rossi <bob@brasko.net>

	* configure: Autogenerated.
	* configure.in (AC_INIT): Add version number.
	(AM_INIT_AUTOMAKE): Remove parameters.

2/13/2006 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Add feature request task.

2/08/2006 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Add possible integration of libopts.

2/04/2006 Bob Rossi <bob@brasko.net>

	* release-todo: Simplify the man page step for releasing.

2/04/2006 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Finished autogenerating man pages with help2man.
