@@ -1,3 +1,8 @@
+   * An improvement for tab completion support. With certain versions of GDB, 
+     an extra line "server complete ..." would be added to the list of 
+     possible completions. This is no longer added. I believe this would
+     only happen with really old versions of GDB.
+   
    * Improved tab completion support in readline for quoted data. For 
      instance tab completing C++ member functions like b 'foo::b<tab>
      will now produce b 'foo::bar()'.
